ui: Dont re-create PaintImages with the same backing bitmap.

R=asvitkine@chromium.org

Bug: 863038
Change-Id: I520fac764e1cc1fda499a29a46aff3a663ad9ed1
Reviewed-on: https://chromium-review.googlesource.com/1135963
Commit-Queue: Khushal <khushalsagar@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Reviewed-by: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574801}
Former-commit-id: 19049df109a2b8cfabf90392bb7a3962a40aca56