ui/gfx/skia_paint_util.cc
@@ -37,13 +37,8 @@ sk_sp<cc::PaintShader> CreateImageRepShaderForScale(
   shader_scale.setScaleX(local_matrix.getScaleX() / scale);
   shader_scale.setScaleY(local_matrix.getScaleY() / scale);
 
-  return cc::PaintShader::MakeImage(
-      cc::PaintImageBuilder::WithDefault()
-          .set_id(cc::PaintImage::GetNextId())
-          .set_image(SkImage::MakeFromBitmap(image_rep.sk_bitmap()),
-                     cc::PaintImage::GetNextContentId())
-          .TakePaintImage(),
-      tile_mode, tile_mode, &shader_scale);
+  return cc::PaintShader::MakeImage(image_rep.paint_image(), tile_mode,
+                                    tile_mode, &shader_scale);
 }
 
 sk_sp<cc::PaintShader> CreateGradientShader(int start_point,
